# Hypr-Agent-Protal

./: .gitignore  .mcp.json  AGENTS.md  CMakeLists.txt  README.md  hyprpm.toml
.codex-plugin/: plugin.json
mcp/: hypr-agent-protal-mcp.py  hyprcum_mcp.py
scripts/: hypr-agent-protalctl  hyprcumctl  install-codex-cursor-asset
src/plugin/: main.cpp  screenshot_capture.cpp  screenshot_capture.hpp
tests/: cursor_render.py  mcp_geometry.py  mcp_smoke.py
